--- a/main.css
+++ b/main.css
@@ -1,7 +1,29 @@
+html {
+    height: 100%;
+}
+
+body {
+    height: 100%;
+}
+
 #landingCarousel {
     height: 100%;
-    margin-top: -100px;
+    overflow: hidden;
 }
+
+.item {
+    height: 100%;
+    position: relative;
+    display: inline-block;
+}
+
+.carousel-inner>.item>img {
+    display: block;
+    height: 100%;
+    width: auto;
+    object-fit: cover;
+}
+
 
 #landing {
     margin-top: 15%;
@@ -33,7 +55,7 @@ footer {
     padding-top: 10px;
     text-align: center;
     background-color: black;
-    height: 100%;
+    height: 40px;
 }
 
 .block hr {
@@ -53,16 +75,15 @@ footer {
     position: relative;
     background-image: url('img/diagmonds.png');
     border: white 2px solid;
+    height: 700px;
 }
 
 #games {
     background-color: cornflowerblue;
-    height: 700px;
 }
 
 #projects {
     background-color: darkmagenta;
-    height: 700px;
 }
 
 #introduction {
@@ -108,7 +129,7 @@ h1 {
 }
 .gallery-image {
     display: block;
-  width: 100%;
+    width: 100%;
     height: auto;
     max-width: 400px;
     border: 2px white solid;
@@ -123,7 +144,7 @@ h1 {
   transition: .5s ease;
   opacity:0;
   color: white;
-  font-size: 20px;
+  font-size: 1.5em;
   padding: 20px;
   text-align: center;
 }
@@ -134,4 +155,102 @@ h1 {
 
 .parallax-window {
     height: 500px;
+}
+
+@media only screen and (max-width: 1600px) {
+    .overlay {
+  font-size: 1em;
+}
+    .block {
+        height: 500px;
+    }
+}
+
+@media only screen and (max-width: 1200px) {
+    .overlay {
+        font-size: 0.75em;
+    }
+    .block {
+        height: 500px;
+    }
+    #landing {
+        margin-top: 20%;
+    }
+    #landing h1 {
+        font-size: 7em;
+    }
+
+    #landing p {
+        font-size: 1.5em;
+        padding-right: 100px;
+    }
+    #introduction p {
+        width: 60%;
+        margin-left: 20%;
+    }
+    #introduction li {
+        font-size: 1.5em;
+        width: 60%;
+        margin-left: 20%;
+    }
+}
+
+@media only screen and (max-width: 800px) {
+    .overlay {
+      font-size: 0.85em;
+    }
+    .block {
+        height: 800px;
+    }
+    .gallery-container {
+        width: 40%;
+        margin-left: 2%;
+        margin-bottom: 2%;
+    }
+    .gallery {
+        margin-top:50px;
+        margin-left: 0;
+        padding: 0;
+        margin-left: 13.5%;
+    }
+    #introduction p {
+        font-size: 1.5em;
+        width: 80%;
+        margin-left: 10%;
+    }
+    #introduction li {
+        font-size: 1.5em;
+        width: 80%;
+        margin-left: 10%;
+    }
+        #landing {
+        margin-top: 30%;
+    }
+        #landing h1 {
+        font-size: 5em;
+    }
+        #landing p {
+        font-size: 1em;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .block {
+        height: 700px;
+    }
+    .gallery-container {
+        width: 45%;
+        margin-left: 2%;
+        margin-bottom: 2%;
+    }
+    .gallery {
+        margin-top:50px;
+        margin-left: 0;
+        padding: 0;
+        margin-left: 4%;
+    }
+}
+
+#introduction {
+    height: auto;
 }
