--- a/main.css
+++ b/main.css
@@ -230,8 +230,12 @@ h1 {
         font-size: 5em;
     }
         #landing p {
-        font-size: 1em;
+        font-size: 0.9em;
     }
+    #landing {
+    margin-top: 15%;
+    padding-left: 7%;
+}
 }
 
 @media only screen and (max-width: 600px) {
