--- a/main.css
+++ b/main.css
@@ -236,6 +236,9 @@ h1 {
     margin-top: 15%;
     padding-left: 7%;
 }
+    .overlay {
+        padding: 10px;
+    }
 }
 
 @media only screen and (max-width: 600px) {
