--- a/main.css
+++ b/main.css
@@ -262,6 +262,9 @@ h1 {
     #introduction p {
     font-size: 1em;
 }
+    .parallax-window {
+    height: 400px;
+}
 }
 
 @media only screen and (max-width: 600px) {
@@ -279,6 +282,9 @@ h1 {
         padding: 0;
         margin-left: 4%;
     }
+    .parallax-window {
+    height: 300px;
+}
 }
 
 #introduction {
