--- a/main.css
+++ b/main.css
@@ -83,11 +83,11 @@ footer {
 }
 
 #games {
-    background-color: cornflowerblue;
+    background-color: limegreen;
 }
 
 #projects {
-    background-color: darkmagenta;
+    background-color: #3333EE;
 }
 
 #introduction {
