--- a/main.css
+++ b/main.css
@@ -62,6 +62,12 @@ footer {
     height: 40px;
 }
 
+.icon {
+    height: 20px;
+    margin-right: 4px;
+    padding-bottom: 0px;
+}
+
 .block hr {
     width: 10%;
     border-width: 2px;
@@ -92,6 +98,11 @@ footer {
 
 #introduction {
     background-color: firebrick;
+}
+
+#featured {
+    background-color: turquoise;
+    height: auto;
 }
 
 #introduction p {
@@ -174,12 +185,82 @@ h1 {
     color: #888;
 }
 
+.feature {
+    height: 500px;
+    margin-top: 60px;
+    margin-bottom: -60px;
+}
+
+.feature-img {
+    border: 2px white solid;
+    width: 30%;
+    float: left;
+    margin-left: 15%;
+    margin-right: 5%;
+}
+
+.feature h2 {
+    margin-top: -5px;
+    margin-right: 15%;
+}
+
+.feature p {
+    padding-top: 5px;
+    font-size: 16px;
+    margin-right: 15%;
+}
+
+.feature a {
+    color: firebrick
+}
+
+@media only screen and (max-width: 3000px) {
+    .feature p {
+        font-size: 20px;
+    }
+}
+
+@media only screen and (max-width: 2000px) {
+    .feature {
+        height: 300px;
+        margin-top: 60px;
+        margin-bottom: 25px;
+    }
+    .feature p {
+        font-size: 17px;
+    }
+}
+
 @media only screen and (max-width: 1600px) {
     .overlay {
   font-size: 1em;
 }
     .block {
         height: 500px;
+    }
+    .feature {
+        height: 400px;
+        margin-top: 60px;
+        margin-bottom: -60px;
+    }
+
+    .feature-img {
+        border: 2px white solid;
+        width: 40%;
+        float: left;
+        margin-left: 5%;
+        margin-right: 5%;
+    }
+
+    .feature h2 {
+        margin-top: -5px;
+        margin-right: 5%;
+    }
+
+    .feature p {
+        padding-top: 5px;
+        font-size: 17px;
+        margin-right: 5%;
     }
 }
 
@@ -212,6 +293,28 @@ h1 {
     }
     .overlay {
         padding: 15px;
+    }
+    
+    .feature {
+        height: 400px;
+        margin-top: 60px;
+        margin-bottom: -120px;
+    }
+    
+    .feature-img {
+        margin-left: 1%;
+        margin-right: 1%;
+    }
+
+    .feature h2 {
+        margin-top: -5px;
+        margin-right: 1%;
+    }
+
+    .feature p {
+        padding-top: 5px;
+        font-size: 17px;
+        margin-right: 1%;
     }
 }
 
@@ -265,6 +368,29 @@ h1 {
     .parallax-window {
     height: 400px;
 }
+    
+    .feature {
+        height: auto;
+        margin-top: 60px;
+        margin-bottom: 10px;
+    }
+
+    .feature-img {
+        border: 2px white solid;
+        width: 70%;
+        float: left;
+        margin-left: 15%;
+        margin-right: 15%;
+        margin-bottom: 7px;
+    }
+
+    .feature h2 {
+        margin-right: 0%;
+    }
+
+    .feature p {
+        margin-right: 0%;
+    }
 }
 
 @media only screen and (max-width: 600px) {
