--- a/main.css
+++ b/main.css
@@ -75,15 +75,10 @@ footer {
 
 .block {
     text-align: center;
-    /*background-image: url(img/bg.png);
-    background-repeat: repeat;*/
     height: 100%;
-    /*border-color: dimgray;
-    border-width: 10px;
-    border-style: outset;*/
     padding: 20px 20px 20px 20px;
     position: relative;
-    background-image: url('img/diagmonds.png');
+    background-image: url('img/diagmonds.jpg');
     border: white 2px solid;
     height: 700px;
 }
