--- a/main.css
+++ b/main.css
@@ -78,7 +78,7 @@ footer {
     height: 100%;
     padding: 20px 20px 20px 20px;
     position: relative;
-    background-image: url('img/diagmonds.jpg');
+    background-image: url('img/diagmonds.png');
     border: white 2px solid;
     height: 700px;
 }
