--- a/main.css
+++ b/main.css
@@ -80,7 +80,7 @@ footer {
     position: relative;
     background-image: url('img/diagmonds.png');
     border: white 2px solid;
-    height: 700px;
+    height: 750px;
 }
 
 #games {
@@ -141,7 +141,6 @@ h1 {
     display: block;
     width: 100%;
     height: auto;
-    max-width: 400px;
     border: 2px white solid;
 }
 .overlay {
@@ -209,10 +208,54 @@ h1 {
     color: firebrick
 }
 
+@media only screen and (max-width: 4000px) {
+    .feature {
+        height: 700px;
+        margin-top: 60px;
+        margin-bottom: 25px;
+    }
+    .feature p {
+        font-size: 35px;
+    }
+    .block {
+        height: 1100px;
+    }
+    #introduction p {
+        font-size: 2em;
+    }
+}
+
 @media only screen and (max-width: 3000px) {
     .feature p {
         font-size: 20px;
     }
+    .block {
+        height: 800px;
+    }
+    .feature {
+    height: 500px;
+    margin-top: 60px;
+    margin-bottom: -60px;
+}
+
+.feature-img {
+    border: 2px white solid;
+    width: 30%;
+    float: left;
+    margin-left: 15%;
+    margin-right: 5%;
+}
+
+.feature h2 {
+    margin-top: -5px;
+    margin-right: 15%;
+}
+
+.feature p {
+    padding-top: 5px;
+    font-size: 16px;
+    margin-right: 15%;
+}
 }
 
 @media only screen and (max-width: 2000px) {
@@ -223,6 +266,12 @@ h1 {
     }
     .feature p {
         font-size: 17px;
+    }
+    .block {
+        height: 700px;
+    }
+    #introduction p {
+        font-size: 1.5em;
     }
 }
 
