--- a/main.css
+++ b/main.css
@@ -136,13 +136,24 @@ h1 {
     float: left;
     margin-left: 1%;
     margin-bottom: 1%;
+    cursor: pointer;
 }
 .gallery-image {
     display: block;
     width: 100%;
     height: auto;
     border: 2px white solid;
+    transition: .3s ease;
 }
+.gallery-container:hover .gallery-image {
+    transform: scale(1.05);
+}
+
+.gallery-p {
+    margin-left: -15%;
+    margin-top: -30px;
+}
+
 .overlay {
   position: absolute; 
   bottom: 0; 
@@ -150,16 +161,18 @@ h1 {
   background: rgba(0, 0, 0, 0.5); /* Black see-through */
   color: #f1f1f1; 
   width: 100%;
-  transition: .5s ease;
+  transition: .3s ease;
   opacity:0;
   color: white;
   font-size: 1.5em;
   padding: 20px;
   text-align: center;
+    transform: scale(0.9);
 }
 /* When you mouse over the container, fade in the overlay title */
 .gallery-container:hover .overlay {
   opacity: 1;
+    transform: scale(1.05);
 }
 
 .parallax-window {
