--- a/competition/main.css
+++ b/competition/main.css
@@ -2,18 +2,20 @@
     font-family: 'Roboto', sans-serif;
 }
 
-/* .card {
-    width: 50%;
+.card {
+    width: 60%;
     margin: auto;
     height: 200px;
     filter: drop-shadow(10px 10px 5px rgba(0, 0, 0, 0.2));
     overflow: hidden;
-    background-size: cover;
-    background-position: center;
-    background:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('img/test.jpg');
     margin-bottom: 10px;
     margin-top: 10px;
-} */
+}
+
+.profile {
+    margin-right: 5px;
+    border-radius: 12.5px;
+}
 
 .pos {
     position: absolute;
